# tkdnn_detection_node

./: .drone.yml  .gitignore  Dockerfile  README.md  detection_node.code-workspace  detection_node.dockerfile  docker.sh  download_model_for_testing.sh  pyproject.toml  start.sh
detector/: __init__.py  box_detection.py  data.py  detection.py  detection_node.code-workspace  detections.py  detections_helper.py  helper.py  main.py  outbox.py  point_detection.py  pytest.ini  tkdnn.py  tkdnn_detector.py
detector/active_learner/: detection.py  learner.py  observation.py
detector/tests/active_learner/: test_active_learning.py  test_learner.py  test_observation.py
detector/tests/detection_node/: conftest.py  test_outbox.py  test_roundtrips.py  test_tkdnn_detector.py
src/: start.sh
tests/active_learner/: test_active_learner_detection.py  test_learner.py
tests/detection_node/: conftest.py  test_outbox.py  test_roundtrips.py  test_tkdnn_detector.py  test_upload_image.py
